<resources>
    <string name="app_name">SmartBulb</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_geofence">Geofence</string>

    <!-- ControlsFragment -->
    <string name="hint_point_lat">Point Latitude</string>
    <string name="hint_point_lon">Point Longitude</string>
    <string name="hint_radius">Radius</string>
    <string name="hint_wifi_name">WiFi Name</string>
    <string name="set_current_wifi">Set current WiFi</string>
    <string name="start_geofencing">Start Geofencing</string>
    <string name="stop_geofencing">Stop Geofencing</string>
    <string name="geofence_state_inside">YOU ARE INSIDE GEOFENCE</string>
    <string name="geofence_state_outsize">YOU ARE OUTSIDE GEOFENCE</string>
    <string name="geofence_state_unknown">UNKNOWN GEOFENCE STATE</string>
    <string name="wifi_undefined">Undefined</string>
    <string name="random_location">Random Location</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="validation_error">Invalid input. Fix errors and try again!</string>
    <string name="validation_error_dialog_title">Error!</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required for geofence detection.</string>
    <string name="location_permission_denied">This application requires location permission for geofence detection. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Geofence\'.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>

    <!-- Validation -->
    <string name="latitude_validation_error">Latitude shoud be within -90..90!</string>
    <string name="longitude_validation_error">Longitude shoud be within -180..180!</string>
    <string name="radius_validation_error">Radius should be positive.</string>
    <string name="double_validation_error">Invalid value!</string>
    <string name="empty_value_validation_error">Empty values not allowed!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_geofence">Geofence</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_header_title">Geofence detector</string>
    <string name="nav_header_email">ashaevy@gmail.com</string>

    <string name="pref_geofenceDetectionProvider">Geofence Detection Provider</string>
    <string name="pref_geofenceDetectionConfiguration">Geofence Detection Configuration</string>
    <string name="pref_geofenceUseMockLocationTitle">Use Mock Location</string>
    <string name="pref_geofenceUseMockLocationSummary">Also you must select Developer options > Select mock location app > Geofence</string>
    <string name="tile_name">Bulb</string>
    <string name="tile_not_available">Not available</string>
    <string name="tile_content_description">Lightbulb</string>
    <string name="tile_off">Off</string>
    <string name="tile_on">On</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_trigger">Trigger</string>
    <string name="pref_header_device">Device</string>

    <string name="pref_key_device_ip">pref_key_device_ip</string>
    <string name="pref_key_device_mac">pref_key_device_mac</string>
    <string name="pref_key_device_port">pref_key_device_port</string>
    <string name="pref_key_device_type">pref_key_device_type</string>
    <string name="pref_key_device_name">pref_key_device_name</string>

    <string name="pref_key_trigger_time_turn_on_when">pref_key_trigger_time_turn_on_when</string>
    <string name="pref_key_trigger_time_turn_off_when">pref_key_trigger_time_turn_off_when</string>
    <string name="pref_key_trigger_time_turn_on_enabled">pref_key_trigger_time_turn_on_enabled</string>
    <string name="pref_key_trigger_time_turn_off_enabled">pref_key_trigger_time_turn_off_enabled</string>
    <string name="pref_key_trigger_wifi_ssid">pref_key_trigger_wifi_ssid</string>
    <string name="pref_key_trigger_wifi_enabled">pref_key_trigger_wifi_enabled</string>

    <string name="pref_title_device_ip">Device IP</string>
    <string name="pref_title_device_mac">Device MAC</string>
    <string name="pref_title_device_port">Device port</string>
    <string name="pref_title_device_type">Device type</string>
    <string name="pref_title_device_name">Device name</string>

    <string name="pref_title_trigger_time_turn_on_when">When to turn on</string>
    <string name="pref_title_trigger_time_turn_off_when">When to turn off</string>
    <string name="pref_title_trigger_time_turn_on_enabled">Turn on time trigger status</string>
    <string name="pref_title_trigger_time_turn_off_enabled">Turn off time trigger status</string>
    <string name="pref_title_trigger_wifi_ssid">Saved wifi ssid</string>
    <string name="pref_title_trigger_wifi_enabled">Wifi trigger status</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_rx_test">RxTestActivity</string>
    <string name="bulb_on">Light ON</string>
    <string name="bulb_off">Light OFF</string>
    <string name="connected">Device connected</string>
    <string name="title_activity_rx2_test">Rx2TestActivity</string>
    <string name="cmd_success">Command success!</string>
    <string name="cmd_fail">Command failed</string>
    <string name="qs_dialog_cancel">Cancel</string>
    <string name="qs_dialog_select">Select</string>
    <string name="qs_dialog_tile_label">Select WIFI</string>


</resources>
