<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_geofenceDetectionConfiguration">

        <ListPreference
            android:key="pref_geofenceDetectionProvider"
            android:title="@string/pref_geofenceDetectionProvider"
            android:dialogTitle="@string/pref_geofenceDetectionProvider"
            android:entries="@array/pref_geofenceDetectionProviders_entries"
            android:entryValues="@array/pref_geofenceDetectionProviders_values"
            android:defaultValue="@string/pref_geofenceDetectionProviders_default" />

        <CheckBoxPreference
            android:key="pref_geofenceUseMockLocation"
            android:title="@string/pref_geofenceUseMockLocationTitle"
            android:summary="@string/pref_geofenceUseMockLocationSummary"
            android:defaultValue="@bool/pref_geofenceUseMockLocationDefault"/>
    </PreferenceCategory>
</PreferenceScreen>