<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ashaevy.geofence.ControlsFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_point_lat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.75"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_point_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_point_lat"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_point_lon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_point_lat"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_point_lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_point_lon"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_radius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_point_lon"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_radius"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_wifi_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_radius"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_wifi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_wifi_name"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:text="@string/set_current_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_set_current_wifi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/geofence_state"
        android:layout_marginTop="8dp" />

    <Button
        android:text="@string/start_geofencing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/start_geofencing"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_set_current_wifi"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:text="@string/stop_geofencing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/stop_geofencing"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/start_geofencing"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.33" />

    <TextView
        android:text="@string/geofence_state_unknown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/geofence_state"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center" />

    <Button
        android:text="@string/random_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_random_location"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stop_geofencing"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
